Update and rename galeriauli.html to galeria.html

--- a/galeria.html
+++ b/galeria.html
@@ -9,11 +9,10 @@
   <div>
    <h1>Carros don manuel</h1>
    <ul id="menu">
-    <li><a href="index.html">Inicio</a></li>
-    <li><a href="galeria.html">Galería</a></li>
-    <li><a href="nosotros.html">Nosotros</a></li>
-    <li><a href="contacto.html">Contacto</a></li>
-    <li><a href="novedades.html">Novedades</a></li>
+   <li><a href="indexuli.html">Inicio</a></li>
+                <li><a href="contactanosuli.html">Contacto</a></li>
+                <li><a href="nosotrosuli.html">Nosotros</a></li>
+                <li><a href="galeria.html">Galería</a></li>
    </ul>
   </div>
   <div>
