--- a/galeria.html
+++ b/galeria.html
@@ -3,7 +3,7 @@
  <head>
    <title>Carro don manuel</title>
    <meta charset="UTF-8">
-   <link rel="stylesheet" href="EstiloGaleria.css"
+   <link rel="stylesheet" href="estlogaleria.css"
  </head>
  <body>
   <div>
